--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "version": "1.0.0",
   "name": "ASP.NET",
   "private": true,
+  "scripts" : {
+    "dev" : "gulp Development",
+    "prod" : "gulp Production"
+  },
   "devDependencies": {
     "gulp": "3.9.0",
     "gulp-concat": "2.6.0",
@@ -10,6 +14,6 @@
     "gulp-uglify": "1.5.1",
     "gulp-inject": "3.0.0",
     "stream-series": "0.1.1",
-    "del": "2.2.0" 
+    "del": "2.2.0"
   }
 }
