remove bower and change application to use relative path

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-# Ignore Node & Bower
+# Ignore Node
 ###################
 node_modules
-/modular/client/build
-/modular/build
-bower_components
-**/test/coverage
-/reports
