--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "version": "1.0.0",
-  "name": "ASP.NET",
+  "name": "Angular-Template",
   "private": true,
-  "scripts" : {
-    "dev" : "gulp Development",
-    "prod" : "gulp Production"
+  "scripts": {
+    "dev": "gulp Development && ws",
+    "prod": "gulp Production && ws"
   },
   "devDependencies": {
     "gulp": "3.9.0",
@@ -15,5 +15,16 @@
     "gulp-inject": "3.0.0",
     "stream-series": "0.1.1",
     "del": "2.2.0"
+  },
+  "dependencies": {
+    "angular": "^1.5.5",
+    "angular-ui-router": "^0.2.18",
+    "bootstrap": "^3.3.6",
+    "font-awesome": "^4.6.1",
+    "jquery": "^2.2.3",
+    "local-web-server": "^1.2.2",
+    "moment": "^2.13.0",
+    "nprogress": "^0.2.0",
+    "toastr": "^2.1.2"
   }
 }
